--- a/apps/dbtriage/cart-pg/docker-compose.yml
+++ b/apps/dbtriage/cart-pg/docker-compose.yml
@@ -1,17 +1,36 @@
 services:
-  postgres:
+  postgres-dev:
     image: postgres:18
-    container_name: cart-pg
+    container_name: cart-pg-dev
     environment:
       POSTGRES_USER: cart_user
       POSTGRES_PASSWORD: cart_pass
       POSTGRES_DB: cartdb
-      sslmode: disable
+      PGDATA: /var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
-      - pgdata:/var/lib/postgresql
-      - ./init:/docker-entrypoint-initdb.d
+      - pgdata-dev:/var/lib/postgresql/data
+      - ./init/dev:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U cart_user -d cartdb"]
+      interval: 5s
+      timeout: 5s
+      retries: 20
+
+  postgres-prod:
+    image: postgres:18
+    container_name: cart-pg-prod
+    environment:
+      POSTGRES_USER: cart_user
+      POSTGRES_PASSWORD: cart_pass
+      POSTGRES_DB: cartdb
+      PGDATA: /var/lib/postgresql/data
+    ports:
+      - "5434:5432"
+    volumes:
+      - pgdata-prod:/var/lib/postgresql/data
+      - ./init/prod:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U cart_user -d cartdb"]
       interval: 5s
@@ -19,4 +38,5 @@ services:
       retries: 20
 
 volumes:
-  pgdata:
+  pgdata-dev:
+  pgdata-prod:
