--- a/apps/platformtriage/pom.xml
+++ b/apps/platformtriage/pom.xml
@@ -4,16 +4,15 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.example</groupId>
-		<artifactId>Triage</artifactId>
+		<artifactId>apps</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>apps</artifactId>
+	<artifactId>platformtriage</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<name>apps</name>
-	<description>Application modules</description>
+	<name>platformtriage</name>
+	<description>platform triage application</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -31,13 +30,6 @@
 		<java.version>21</java.version>
 		<spring-cloud-azure.version>6.1.0</spring-cloud-azure.version>
 	</properties>
-
-	<modules>
-		<module>dbtriage</module>
-		<module>platformtriage</module>
-	</modules>
-
-
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -77,7 +69,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -88,6 +80,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.kubernetes</groupId>
+			<artifactId>client-java</artifactId>
+			<version>25.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
@@ -134,7 +135,7 @@
 					</containers>
 					<ingress>
 						<external>true</external>
-						<targetPort>8080</targetPort>
+						<targetPort>8081</targetPort>
 					</ingress>
 					<scale>
 						<minReplicas>0</minReplicas>
