--- a/apps/smoketests/pom.xml
+++ b/apps/smoketests/pom.xml
@@ -4,43 +4,27 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.example</groupId>
-		<artifactId>Triage</artifactId>
+		<artifactId>apps</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>apps</artifactId>
+	<artifactId>smoketests</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<name>apps</name>
-	<description>Application modules</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
+	<name>smoketests</name>
+	<description>Smoke Tests API - Fast, deterministic API confidence checks</description>
 	<properties>
 		<java.version>21</java.version>
 		<spring-cloud-azure.version>6.1.0</spring-cloud-azure.version>
+		<swagger-parser.version>2.1.20</swagger-parser.version>
+		<snakeyaml.version>2.2</snakeyaml.version>
 	</properties>
-
-	<modules>
-		<module>common</module>
-		<module>dbtriage</module>
-		<module>platformtriage</module>
-		<module>smoketests</module>
-	</modules>
-
-
 	<dependencies>
+		<dependency>
+			<groupId>com.example</groupId>
+			<artifactId>common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -61,25 +45,32 @@
 			<groupId>com.azure.spring</groupId>
 			<artifactId>spring-cloud-azure-starter-actuator</artifactId>
 		</dependency>
+		
+		<!-- OpenAPI parsing -->
 		<dependency>
-			<groupId>com.azure.spring</groupId>
-			<artifactId>spring-cloud-azure-starter-jdbc-postgresql</artifactId>
+			<groupId>io.swagger.parser.v3</groupId>
+			<artifactId>swagger-parser</artifactId>
+			<version>${swagger-parser.version}</version>
 		</dependency>
+		
+		<!-- YAML parsing -->
 		<dependency>
-			<groupId>org.springframework.session</groupId>
-			<artifactId>spring-session-jdbc</artifactId>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>${snakeyaml.version}</version>
 		</dependency>
-
+		
+		<!-- HTTP Client for API calls -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -90,6 +81,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
@@ -116,32 +115,6 @@
 							<artifactId>lombok</artifactId>
 						</path>
 					</annotationProcessorPaths>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>com.microsoft.azure</groupId>
-				<artifactId>azure-container-apps-maven-plugin</artifactId>
-				<version>0.1.0</version>
-				<configuration>
-					<subscriptionId>your-subscription-id</subscriptionId>
-					<resourceGroup>your-resource-group</resourceGroup>
-					<appEnvironmentName>your-app-environment-name</appEnvironmentName>
-					<region>your-region</region>
-					<appName>Triage</appName>
-					<containers>
-						<container>
-							<type>code</type>
-							<directory>${project.basedir}</directory>
-						</container>
-					</containers>
-					<ingress>
-						<external>true</external>
-						<targetPort>8080</targetPort>
-					</ingress>
-					<scale>
-						<minReplicas>0</minReplicas>
-						<maxReplicas>10</maxReplicas>
-					</scale>
 				</configuration>
 			</plugin>
 			<plugin>
